changes font:    Helvetica -> Ubuntu    ;     Andale Mono -> DejaVu Sans Mono as described here https://github.com/progit/progit/wiki/Known-Issues

--- a/latex/config.yml
+++ b/latex/config.yml
@@ -1,7 +1,7 @@
 default:
-  font: Helvetica
+  font: Ubuntu
   bold: "{* Bold}"
-  mono: Andale Mono
+  mono: DejaVu Sans Mono
   prechap: "Chapter "
   postchap: ""
   presect: "Section "
